--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -442,3 +442,12 @@ weather:
 
 zenless_zone_zero:
   - com.HoYoverse.Nap/com.mihoyo.combosdk.ComboSDKActivity
+
+clock:
+  - com.android.deskclock.go/com.android.deskclock.DeskClockTabActivity
+
+flashlight:
+  - flashlight.led.clock/flashlight.led.clock.Flashlight
+
+bluetooth:
+  - com.radiant.bluetooth.pairing.app.auto.connect/com.radiant.bluetooth.pairing.app.auto.connect.SplashAct
