--- a/contribs/requests.yml
+++ b/contribs/requests.yml
@@ -1511,16 +1511,6 @@ com.wishop.dev.jow/com.mobile.MainActivity:
     - https://f-droid.org/en/packages/com.wishop.dev.jow/
     - https://google.com/search?q=com.wishop.dev.jow
 
-com.radiant.bluetooth.pairing.app.auto.connect/com.radiant.bluetooth.pairing.app.auto.connect.SplashAct:
-  name: Bluetooth App
-  reqt: 1
-  reql: 2024-11-22 16:00:10
-  hash: 5d411f9d88b6f687640005c667dbe8263346c041
-  urls:
-    - https://play.google.com/store/apps/details?id=com.radiant.bluetooth.pairing.app.auto.connect
-    - https://f-droid.org/en/packages/com.radiant.bluetooth.pairing.app.auto.connect/
-    - https://google.com/search?q=com.radiant.bluetooth.pairing.app.auto.connect
-
 br.gov.go.agrodefesa.tabletagrodefesa/br.gov.go.agrodefesa.tabletagrodefesa.activities.LoginActivity:
   name: Agrodefesa
   reqt: 1
@@ -2371,8 +2361,8 @@ com.brucemax.boxintervals/com.brucemax.boxintervals.activities.SplashActivity:
     - https://f-droid.org/en/packages/com.brucemax.boxintervals/
     - https://google.com/search?q=com.brucemax.boxintervals
 
-? mx.com.banjercito.model.common.VTUserApplicationBJCTMB/mx.com.banjercito.model.common.VTUserApplicationBJCTMB.VTCommonActivity
-: name: Banjecel
+mx.com.banjercito.model.common.VTUserApplicationBJCTMB/mx.com.banjercito.model.common.VTUserApplicationBJCTMB.VTCommonActivity:
+  name: Banjecel
   reqt: 1
   reql: 2024-11-16 12:06:46
   hash: 3481aa19be19ebeae0780f6076c2c28c55132317
@@ -3000,16 +2990,6 @@ com.ezplugins.leafblowerrevolution/com.ezplugins.leafblowerrevolution.RunnerActi
     - https://play.google.com/store/apps/details?id=com.ezplugins.leafblowerrevolution
     - https://f-droid.org/en/packages/com.ezplugins.leafblowerrevolution/
     - https://google.com/search?q=com.ezplugins.leafblowerrevolution
-
-com.android.deskclock.go/com.android.deskclock.DeskClockTabActivity:
-  name: Clock
-  reqt: 1
-  reql: 2024-11-11 17:45:32
-  hash: d3a2e6d5e5cc97822a0519a91625f0caee136bce
-  urls:
-    - https://play.google.com/store/apps/details?id=com.android.deskclock.go
-    - https://f-droid.org/en/packages/com.android.deskclock.go/
-    - https://google.com/search?q=com.android.deskclock.go
 
 delverlab.delverlens/delverlab.delverlens.main.ActivitySplash:
   name: Delver Lens N
@@ -7071,16 +7051,6 @@ today.wander.acs/my.com.softspace.posh.SSPoshMainActivity:
     - https://f-droid.org/en/packages/today.wander.acs/
     - https://google.com/search?q=today.wander.acs
 
-flashlight.led.clock/flashlight.led.clock.Flashlight:
-  name: مصباح يدوي
-  reqt: 1
-  reql: 2024-10-08 09:45:30
-  hash: ded925a24be00d1501752e35bedae92ecec864fb
-  urls:
-    - https://play.google.com/store/apps/details?id=flashlight.led.clock
-    - https://f-droid.org/en/packages/flashlight.led.clock/
-    - https://google.com/search?q=flashlight.led.clock
-
 fr.axa.youdrive/fr.axa.youdrive.ui.splash.SplashActivity:
   name: YouDrive
   reqt: 1
@@ -10931,8 +10901,8 @@ nz.govt.at.atmobile/nz.govt.at.atmobile.MainActivity:
     - https://f-droid.org/en/packages/nz.govt.at.atmobile/
     - https://google.com/search?q=nz.govt.at.atmobile
 
-? scientific.graphing.calculator.t84.t36.t83/scientific.graphing.calculator.t84.t36.t83.main.ytivitcArotaluclaCecneicS_cxpFVWKLpGyBWv_deQTOWpN_ABjPMN
-: name: Calc84
+scientific.graphing.calculator.t84.t36.t83/scientific.graphing.calculator.t84.t36.t83.main.ytivitcArotaluclaCecneicS_cxpFVWKLpGyBWv_deQTOWpN_ABjPMN:
+  name: Calc84
   reqt: 1
   reql: 2024-09-02 22:52:20
   hash: 8a805790c05cdbd7a6bc5fb88a4e4b6e4dd99a6e
