--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -457,3 +457,30 @@ flashlight:
 
 bluetooth:
   - com.radiant.bluetooth.pairing.app.auto.connect/com.radiant.bluetooth.pairing.app.auto.connect.SplashAct
+
+jelly_icon_pack:
+  - org.jelly.eletre/org.andcreator.iconpack.activity.MainActivity
+
+onewheel:
+  - com.rideonewheel.onewheel/com.rideonewheel.onewheel.MainActivity
+
+netgear_nighthawk:
+  - com.netgear.netgearup/com.netgear.netgearup.LauncherActivity
+
+tibber:
+  - com.tibber.android/com.tibber.android.app.activity.link.MagicLinkActivity
+
+password_safe_manager:
+  - com.reneph.passwordsafe/com.reneph.passwordsafe.login.LoginActivity
+
+sketchup_viewer:
+  - com.trimble.buildings.sketchup/com.trimble.buildings.sketchup.ui.SplashActivity
+
+xcurrency:
+  - com.tratao.xcurrency/com.tratao.xcurrency.TermsActivity
+
+lavender_photos:
+  - com.kaii.photos/com.kaii.photos.MainActivity
+
+bijnis:
+  - com.shoekonnect.bizcrum/com.shoekonnect.bizcrum.activities.SplashScreenActivity
