--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -457,3 +457,6 @@ flashlight:
 
 bluetooth:
   - com.radiant.bluetooth.pairing.app.auto.connect/com.radiant.bluetooth.pairing.app.auto.connect.SplashAct
+
+sms_alt_3:
+  - com.messenger.sms.messages/com.messenger.sms.feature.main.SplashActivity
