Fix remaining icons left in folder after v1.9.9 beta release

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -15,3 +15,6 @@
 
 sms_alt_3:
   - com.messenger.sms.messages/com.messenger.sms.feature.main.SplashActivity
+
+cube_acr:
+  - com.catalinagroup.callrecorder/com.catalinagroup.callrecorder.AppListActivityAlias
