--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -63,3 +63,6 @@ cappuccino:
 
 quillbot:
   - com.quillbot.mobile/com.quillbot.mobile.hostApp.QuillBotFlutterActivity
+
+wire:
+  - com.wire/com.wire.android.ui.WireActivity
