Add Icons + ComponentInfos

--- a/contribs/requests.yml
+++ b/contribs/requests.yml
@@ -1,5 +1,5 @@
-# 1115 requested apps pending 
-# updated 2024-12-10 22:26:43
+# 1108 requested apps pending 
+# updated 2024-12-13 06:42:00
 
 com.levelinfinite.sgameGlobal/com.levelinfinite.sgameGlobal.SGameGlobalActivity:
     name: Honor of Kings
@@ -40,16 +40,6 @@ com.hdictionary.bn/com.hdictionary.bn.DictionaryActivity:
         - https://play.google.com/store/apps/details?id=com.hdictionary.bn
         - https://f-droid.org/en/packages/com.hdictionary.bn/
         - https://google.com/search?q=com.hdictionary.bn
-
-com.studio27.MelonPlayground/com.unity3d.player.UnityPlayerActivity:
-    name: Melon Sandbox
-    reqt: 3
-    reql: 2024-11-26 23:18:18
-    hash: 7db1032c41630d211ed5fb55c185bf43d2650d08
-    urls:
-        - https://play.google.com/store/apps/details?id=com.studio27.MelonPlayground
-        - https://f-droid.org/en/packages/com.studio27.MelonPlayground/
-        - https://google.com/search?q=com.studio27.MelonPlayground
 
 com.hutchgames.formularacing/com.unity3d.player.UnityPlayerActivity:
     name: F1 Clash
@@ -111,16 +101,6 @@ com.tanksblitz/com.dava.engine.DavaActivity:
         - https://f-droid.org/en/packages/com.tanksblitz/
         - https://google.com/search?q=com.tanksblitz
 
-com.teuxdeux.twa/com.teuxdeux.MainActivity:
-    name: TeuxDeux
-    reqt: 2
-    reql: 2024-11-29 13:21:41
-    hash: 4a286536e58cc187f43b421089adc5793bf0c1b4
-    urls:
-        - https://play.google.com/store/apps/details?id=com.teuxdeux.twa
-        - https://f-droid.org/en/packages/com.teuxdeux.twa/
-        - https://google.com/search?q=com.teuxdeux.twa
-
 com.dbbl.nexus.pay/com.dbbl.nexus.pay.ui.splash.SplashActivity:
     name: NexusPay
     reqt: 2
@@ -150,26 +130,6 @@ com.devolver.grispaid/com.unity3d.player.UnityPlayerActivity:
         - https://play.google.com/store/apps/details?id=com.devolver.grispaid
         - https://f-droid.org/en/packages/com.devolver.grispaid/
         - https://google.com/search?q=com.devolver.grispaid
-
-com.realme.as.music/com.allsaints.music.ui.splash.SplashActivity:
-    name: Music
-    reqt: 2
-    reql: 2024-11-23 15:33:13
-    hash: ed59dd8b75cbce8ddb319378c39d4c59c8383844
-    urls:
-        - https://play.google.com/store/apps/details?id=com.realme.as.music
-        - https://f-droid.org/en/packages/com.realme.as.music/
-        - https://google.com/search?q=com.realme.as.music
-
-air.kukulive.mailnow/air.kukulive.mailnow.MainActivity:
-    name: InstAddr
-    reqt: 2
-    reql: 2024-11-22 08:39:25
-    hash: 84f87791f86cba0ae92fd19e1990f337ba26a03e
-    urls:
-        - https://play.google.com/store/apps/details?id=air.kukulive.mailnow
-        - https://f-droid.org/en/packages/air.kukulive.mailnow/
-        - https://google.com/search?q=air.kukulive.mailnow
 
 epub.reader/com.foobnix.ui2.MainTabs2:
     name: Epub Reader
@@ -1711,16 +1671,6 @@ me.kuehle.carreport/me.kuehle.carreport.gui.MainActivity:
         - https://f-droid.org/en/packages/me.kuehle.carreport/
         - https://google.com/search?q=me.kuehle.carreport
 
-com.themeink.wallpop/com.themeink.wallpop.ui.activities.LaunchActivity:
-    name: Wallpop
-    reqt: 1
-    reql: 2024-11-21 16:35:41
-    hash: 045a8784cef5d4e22e17e85a756902765a03e929
-    urls:
-        - https://play.google.com/store/apps/details?id=com.themeink.wallpop
-        - https://f-droid.org/en/packages/com.themeink.wallpop/
-        - https://google.com/search?q=com.themeink.wallpop
-
 app.whatismyipaddress/app.whatismyipaddress.android.MainActivity:
     name: What Is My IP Address
     reqt: 1
@@ -2341,9 +2291,8 @@ com.brucemax.boxintervals/com.brucemax.boxintervals.activities.SplashActivity:
         - https://f-droid.org/en/packages/com.brucemax.boxintervals/
         - https://google.com/search?q=com.brucemax.boxintervals
 
-? mx.com.banjercito.model.common.VTUserApplicationBJCTMB/mx.com.banjercito.model.common.VTUserApplicationBJCTMB.VTCommonActivity
-
-:   name: Banjecel
+mx.com.banjercito.model.common.VTUserApplicationBJCTMB/mx.com.banjercito.model.common.VTUserApplicationBJCTMB.VTCommonActivity:
+    name: Banjecel
     reqt: 1
     reql: 2024-11-16 12:06:46
     hash: 3481aa19be19ebeae0780f6076c2c28c55132317
@@ -2851,16 +2800,6 @@ ht.nct/ht.nct.ui.activity.splash.SplashActivity:
         - https://play.google.com/store/apps/details?id=ht.nct
         - https://f-droid.org/en/packages/ht.nct/
         - https://google.com/search?q=ht.nct
-
-jp.krispykreme.app/li.yapp.sdk.YLSplashActivity:
-    name: Krispy Kreme
-    reqt: 1
-    reql: 2024-11-12 03:38:49
-    hash: c038824c1d6d4f3f907d137225e43edaeba4737a
-    urls:
-        - https://play.google.com/store/apps/details?id=jp.krispykreme.app
-        - https://f-droid.org/en/packages/jp.krispykreme.app/
-        - https://google.com/search?q=jp.krispykreme.app
 
 partl.workinghours/crc64cd18cf298694e84d.MainActivity:
     name: WorkingHours
@@ -8822,9 +8761,8 @@ com.maxpatchs.moxy/com.maxpatchs.moxy.activities.MainActivity:
         - https://f-droid.org/en/packages/com.maxpatchs.moxy/
         - https://google.com/search?q=com.maxpatchs.moxy
 
-? com.crosshair.crosshairgenerator.crosshairtool.improveshootingaccuracy.aimhelper.shootingassistant.aim/crosshair.cyber.asdcca.crosshair.InitialStarting
-
-:   name: aCrossHair Para Jogos
+com.crosshair.crosshairgenerator.crosshairtool.improveshootingaccuracy.aimhelper.shootingassistant.aim/crosshair.cyber.asdcca.crosshair.InitialStarting:
+    name: aCrossHair Para Jogos
     reqt: 1
     reql: 2024-09-20 20:33:06
     hash: 9646fd07257c19115badbbeb3e05fef23166ba74
@@ -10803,9 +10741,8 @@ nz.govt.at.atmobile/nz.govt.at.atmobile.MainActivity:
         - https://f-droid.org/en/packages/nz.govt.at.atmobile/
         - https://google.com/search?q=nz.govt.at.atmobile
 
-? scientific.graphing.calculator.t84.t36.t83/scientific.graphing.calculator.t84.t36.t83.main.ytivitcArotaluclaCecneicS_cxpFVWKLpGyBWv_deQTOWpN_ABjPMN
-
-:   name: Calc84
+scientific.graphing.calculator.t84.t36.t83/scientific.graphing.calculator.t84.t36.t83.main.ytivitcArotaluclaCecneicS_cxpFVWKLpGyBWv_deQTOWpN_ABjPMN:
+    name: Calc84
     reqt: 1
     reql: 2024-09-02 22:52:20
     hash: 8a805790c05cdbd7a6bc5fb88a4e4b6e4dd99a6e
@@ -10904,9 +10841,8 @@ com.hisn.almuslim/com.hisn.almuslim.activity.SplashActivity:
         - https://f-droid.org/en/packages/com.hisn.almuslim/
         - https://google.com/search?q=com.hisn.almuslim
 
-? com.phonelocator.mobile.number.locationfinder.callerid/com.phonelocator.mobile.number.locationfinder.callerid.main.PreActivity
-
-:   name: Mobile Number Locator
+com.phonelocator.mobile.number.locationfinder.callerid/com.phonelocator.mobile.number.locationfinder.callerid.main.PreActivity:
+    name: Mobile Number Locator
     reqt: 1
     reql: 2024-09-02 13:28:39
     hash: 824cc3ca540737abf04456aef785d629c40bf8c6
