--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -18,3 +18,21 @@ sms_alt_3:
 
 cube_acr:
   - com.catalinagroup.callrecorder/com.catalinagroup.callrecorder.AppListActivityAlias
+
+teuxdeux:
+  - com.teuxdeux.twa/com.teuxdeux.MainActivity
+
+melon_sandbox:
+  - com.studio27.MelonPlayground/com.unity3d.player.UnityPlayerActivity
+
+music:
+  - com.realme.as.music/com.allsaints.music.ui.splash.SplashActivity
+
+instaddr:
+  - air.kukulive.mailnow/air.kukulive.mailnow.MainActivity
+
+krispy_kreme:
+  - jp.krispykreme.app/li.yapp.sdk.YLSplashActivity
+
+wallsplash:
+  - com.themeink.wallpop/com.themeink.wallpop.ui.activities.LaunchActivity
