--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -84,3 +84,8 @@ quillbot:
 
 wire:
   - com.wire/com.wire.android.ui.WireActivity
+
+swiggy:
+  - in.swiggy.android.activities.HomeActivity
+
+swiggy_alt_1: {}
