--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -86,6 +86,6 @@ wire:
   - com.wire/com.wire.android.ui.WireActivity
 
 swiggy:
-  - in.swiggy.android.activities.HomeActivity
+  - in.swiggy.android/in.swiggy.android.activities.HomeActivity
 
 swiggy_alt_1: {}
