add compinfos from bug reports

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -86,3 +86,18 @@ wire:
   - com.wire/com.wire.android.ui.WireActivity
 
 swiggy_alt_1: {}
+
+air_canada:
+  - com.aircanada/com.aircanada.mobile.ui.activity.OnBoardingActivity.OlympicsIconLauncher
+
+kayak:
+  - com.kayak.android/com.kayak.android.splash.SplashActivity
+
+linked__in:
+  - com.linkedin.android/com.linkedin.android.authenticator.FallFestivalActivityAlias
+
+streetcomplete:
+  - de.westnordost.streetcomplete/de.westnordost.streetcomplete.screens.main.MainActivity
+
+elevate:
+  - com.wonder/com.pegasus.feature.main.MainActivityDefault
