add compinfos gathered from the script (manually checked every one this time, haha)

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -101,3 +101,42 @@ streetcomplete:
 
 elevate:
   - com.wonder/com.pegasus.feature.main.MainActivityDefault
+
+camera:
+  - com.android.MGC_9_1_098/com.android.camera.CameraLauncher
+
+calendar:
+  - foundation.e.calendar/com.android.calendar.AllInOneActivity
+
+wordfeud:
+  - com.hbwares.wordfeud.full/com.hbwares.wordfeud.ui.WordFeudActivity
+
+camera:
+  - com.agc.gcam88/com.android.camera.CameraLauncher
+
+youtube:
+  - app.rex.android.youtube/com.google.android.youtube.app.honeycomb.Shell$HomeActivity
+
+gacha_club:
+  - air.com.lunime.gachanoxmodv1/air.com.lunime.gachaclub.AppEntry
+
+emag:
+  - hu.emag.android/ro.emag.android.cleancode.app.ActivityStart
+
+nebo:
+  - com.myscript.nebo.lenovo/com.myscript.nebo.BootstrapActivity
+
+kotatsu:
+  - org.koitharu.kotatsu.nightly/org.koitharu.kotatsu.main.ui.MainActivity
+
+vernet:
+  - org.fsociety.vernet.store/org.fsociety.vernet.MainActivity
+
+video_downloader:
+  - all.video.downloader.allvideodownloader/video.downloader.videodownloader.activity.MainActivity
+
+zenless_zone_zero:
+  - com.HoYoverse.NapVn/com.mihoyo.combosdk.ComboSDKActivity
+
+vshop_for_valorant:
+  - dev.vasc.vshop2/dev.vasc.vshop2.MainActivity
