--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -140,3 +140,33 @@ zenless_zone_zero:
 
 vshop_for_valorant:
   - dev.vasc.vshop2/dev.vasc.vshop2.MainActivity
+
+infinity_p8_player_emulator:
+  - me.dt2dev.infinity/me.dt2dev.infinity.MainActivity
+
+jujutsu_kaisen_phantom_parade:
+  - com.bilibilihk.jujutsuphanparagp/com.unity3d.player.UnityPlayerActivity
+
+lossless_jpg_crop:
+  - de.k3b.android.lossless_jpg_crop/de.k3b.android.lossless_jpg_crop.CropAreasEditActivity
+
+epub_reader:
+  - epub.reader/com.foobnix.ui2.MainTabs2
+
+polybuzz:
+  - ai.socialapps.speakmaster/com.snapquiz.app.InitActivity
+
+echoir:
+  - dev.jyotiraditya.echoir/dev.jyotiraditya.echoir.MainActivity
+
+f1_clash:
+  - com.hutchgames.formularacing/com.unity3d.player.UnityPlayerActivity
+
+nexus_pay:
+  - com.dbbl.nexus.pay/com.dbbl.nexus.pay.ui.splash.SplashActivity
+
+kernelsu_next:
+  - com.rifsxd.ksunext/com.rifsxd.ksunext.ui.MainActivity
+
+gtworld:
+  - com.gtbank.gtworldv1/com.gtbank.gtworldv1.ui.activities.app.AppActivity
