--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -170,3 +170,12 @@ kernelsu_next:
 
 gtworld:
   - com.gtbank.gtworldv1/com.gtbank.gtworldv1.ui.activities.app.AppActivity
+
+atm_milano:
+  - it.atm.appmobile/com.hitachiapp.MainActivity
+
+lawnchair_launcher:
+  - app.lawnchair.nightly/app.lawnchair.LawnchairLauncher
+
+bitget:
+  - com.bitkeep.wallet/com.bitkeep.wallet.MainActivity
