--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,9 @@ android {
 		multiDexEnabled true
 
 		// Naming app bundles
-		setArchivesBaseName("delta-v${versionName}")
+		tasks.withType(Jar).configureEach {
+			archiveBaseName.set("delta-v${versionCode}")
+		}
 	}
 
 	bundle {
@@ -68,7 +70,7 @@ dependencies {
      */
 
 	playImplementation 'com.github.zixpo:candybar:3.20.3'
-	fossImplementation 'com.github.donnnno:candybar-foss:3.20.3'
+	fossImplementation 'com.github.donnnno:candybar-foss:3.20.4'
 }
 
 // Code for automatically copying appfilter.xml and drawable.xml
