Add Icons + ComponentInfos

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -27,6 +27,7 @@ melon_sandbox:
 
 music:
   - com.realme.as.music/com.allsaints.music.ui.splash.SplashActivity
+  - com.musicplayer.music/com.musicplayer.music.ui.splash.SplashScreenActivity
 
 instaddr:
   - air.kukulive.mailnow/air.kukulive.mailnow.MainActivity
@@ -179,3 +180,11 @@ lawnchair_launcher:
 
 bitget:
   - com.bitkeep.wallet/com.bitkeep.wallet.MainActivity
+
+hermit_alt_1: {}
+
+parkee:
+  - com.parkee/com.parkee.splash_screen.SplashScreenActivity
+
+musicboard:
+  - com.musicboard/com.musicboard.MainActivity
