--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -188,3 +188,30 @@ parkee:
 
 musicboard:
   - com.musicboard/com.musicboard.MainActivity
+
+omnipod_5_app:
+  - com.insulet.myblue.pdm/com.insulet.myblue.pdm.PrelaunchActivity
+
+yowindow_weather:
+  - yo.app/yo.activity.MainActivity
+
+ddc_toolbox:
+  - cf.thebone.ddctoolbox/cf.thebone.ddctoolbox.MainActivity
+
+hp_pay:
+  - com.drivetrackplusrefuel/com.drivetrackplusrefuel.splash.GlanceActivity
+
+yamada_mobile:
+  - jp.co.unisys.android.yamadamobile/jp.co.unisys.android.yamadamobile.StartupActivity
+
+supreme_duelist:
+  - com.Neurononfire.SupremeDuelist/com.google.firebase.MessagingUnityPlayerActivity
+
+samsung_interpreter:
+  - com.samsung.android.app.interpreter/com.samsung.android.app.interpreter.interpretation.view.InterpretationLauncherActivity
+
+mojepzu:
+  - pl.pzu.moje/pl.pzu.moje.feature.launcher.LauncherActivity
+
+wa_revamp:
+  - its.madruga.warevamp/its.madruga.warevamp.ui.activitys.MainActivity
