--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -51,3 +51,15 @@ enforcedoze:
 
 yemek_com:
   - com.yemeksepeti.yemekcom/com.yemeksepeti.yemekcom.presentation.activity.main.MainActivity
+
+binance:
+  - com.cloud.tr/binance.app.main.module.StartActivity
+
+okx:
+  - com.okx.tr/com.okinc.core.ok_app.homepage.ui.welcome.WelcomeActivity
+
+qobuz:
+  - com.qobuz.music/com.qobuz.android.mobile.app.refont.screen.launch.LauncherActivity
+
+thanox:
+  - github.tornaco.android.thanos/now.fortuitous.thanos.main.NavActivity
