Add icons&compinfo (#1064)
* add icons

* add compinfo

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,54 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+flare:
+  - dev.dimension.flare/dev.dimension.flare.MainActivity
+
+swapper_root:
+  - com.allakore.swapper/com.allakore.swapper.SplashActivity
+
+algida:
+  - com.unilever.algida/com.unilever.algida.MainActivity
+
+nays:
+  - com.nextcx.nays/com.isbank.nextcx.DeepLinkActivityDefault
+
+swapper:
+  - com.allakore.swapnoroot/com.allakore.swapnoroot.ui.activities.SplashActivity
+
+native_detector:
+  - com.reveny.nativecheck/com.reveny.nativecheck.ui.activity.MainActivity
+
+hepsi_burada:
+  - com.pozitron.hepsiburada/com.hepsiburada.ui.startup.SplashActivity
+
+pacer_pedometer:
+  - cc.pacer.androidapp/cc.pacer.androidapp.ui.splash.SplashActivity
+
+collage_maker:
+  - photoeditor.layout.collagemaker/com.camerasideas.collagemaker.activity.DummyActivity
+
+turrit:
+  - org.telegram.group/org.telegram.messenger.DefaultIcon
+
+iscep:
+  - com.pozitron.iscep/com.pozitron.iscep.features.prelogin.splash.SplashActivity
+
+enforcedoze:
+  - com.akylas.enforcedoze/com.akylas.enforcedoze.MainActivity
+
+yemek_com:
+  - com.yemeksepeti.yemekcom/com.yemeksepeti.yemekcom.presentation.activity.main.MainActivity
+
+binance:
+  - com.cloud.tr/binance.app.main.module.StartActivity
+
+okx:
+  - com.okx.tr/com.okinc.core.ok_app.homepage.ui.welcome.WelcomeActivity
+
+qobuz:
+  - com.qobuz.music/com.qobuz.android.mobile.app.refont.screen.launch.LauncherActivity
+
+thanox:
+  - github.tornaco.android.thanos/now.fortuitous.thanos.main.NavActivity
