--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -63,3 +63,6 @@ qobuz:
 
 thanox:
   - github.tornaco.android.thanos/now.fortuitous.thanos.main.NavActivity
+  
+mysa_gov:
+  - au.gov.sa.my/au.gov.sa.my.MainActivity
