--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -66,3 +66,9 @@ thanox:
   
 mysa_gov:
   - au.gov.sa.my/au.gov.sa.my.MainActivity
+
+axs_tickets:
+  - com.axs.android/com.axs.android.ui.content.main.MainActivity
+
+distrokid:
+  - com.distrokid.dk/com.distrokid.dk.MainActivity
