--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -72,3 +72,6 @@ axs_tickets:
 
 distrokid:
   - com.distrokid.dk/com.distrokid.dk.MainActivity
+
+bandcamp_for_artists:
+  - com.bandcamp.artistapp/com.bandcamp.artistapp.RootTabActivity
