--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -75,3 +75,12 @@ distrokid:
 
 bandcamp_for_artists:
   - com.bandcamp.artistapp/com.bandcamp.artistapp.RootTabActivity
+
+mlb_ballpark:
+  - com.bamnetworks.mobile.android.ballpark/com.bamnetworks.mobile.android.ballpark.activity.MainActivity
+
+quip:
+  - com.quip.mobile/com.quip.mobile.MainActivity
+
+polaroid:
+  - com.polaroidoriginals.po1/com.theimpossible.polaroidoriginals.home.splash.SplashActivity
