--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -84,3 +84,9 @@ quip:
 
 polaroid:
   - com.polaroidoriginals.po1/com.theimpossible.polaroidoriginals.home.splash.SplashActivity
+
+gamers:
+  - com.gamersjo/com.gamersjo.ui.SplashActivity
+
+jawaker:
+  - com.boundless.jawaker/com.google.firebase.MessagingUnityPlayerActivity
