--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -90,3 +90,12 @@ gamers:
 
 jawaker:
   - com.boundless.jawaker/com.google.firebase.MessagingUnityPlayerActivity
+
+doukutsu_rs:
+  - io.github.doukutsu_rs/io.github.doukutsu_rs.MainActivity
+
+my_molina:
+  - com.molina.mobile.myhealthinhand/com.molina.mobile.myhealthinhand.ui.launch.LaunchScreenActivity
+
+shippity:
+  - com.shippity/com.shippity.MainActivity
