--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -99,3 +99,6 @@ my_molina:
 
 shippity:
   - com.shippity/com.shippity.MainActivity
+
+remitly:
+  - com.remitly.androidapp/com.remitly.androidapp.MainActivity
