Added Munbyn Print Icon

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -66,3 +66,6 @@ thanox:
   
 mysa_gov:
   - au.gov.sa.my/au.gov.sa.my.MainActivity
+
+munbyn_print:
+  - com.syz.mprint/com.syz.mprint.view.activity.LaunchActivity
