--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -102,3 +102,12 @@ shippity:
 
 remitly:
   - com.remitly.androidapp/com.remitly.androidapp.MainActivity
+
+firsty_travel_esim:
+  - com.firsty.app/com.firsty.bamboo1.MainActivity
+
+dr_prius:
+  - com.nexcell.app/com.nexcell.app.SplashActivity
+
+vantrue:
+  - com.sanjiang.vantrue/com.youqing.pro.dvr.vantrue.ui.welcome.SplashAct
