--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -111,3 +111,12 @@ dr_prius:
 
 vantrue:
   - com.sanjiang.vantrue/com.youqing.pro.dvr.vantrue.ui.welcome.SplashAct
+
+minireview:
+  - minireview.best.android.games.reviews/minireview.best.android.games.reviews.MainActivity
+
+slipstream:
+  - net.subpixel.Slipstream/com.unity3d.player.UnityPlayerActivity
+
+voidpet_garden:
+  - com.voidpet/com.voidpet.MainActivity
