--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -120,3 +120,12 @@ slipstream:
 
 voidpet_garden:
   - com.voidpet/com.voidpet.MainActivity
+
+total_commander_ftp_plugin:
+  - com.ghisler.tcplugins.FTP/com.android.tcplugins.FileSystem.AboutActivity
+
+cat_fishing_2:
+  - com.friskies.Catfishing2/com.purina.catfishing.CustomDefaultActivity
+
+total_commander_wifi_wlan_plugin:
+  - com.ghisler.tcplugins.wifitransfer/com.ghisler.tcplugins.wifitransfer.WifiReceiveActivity
