--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -129,3 +129,6 @@ cat_fishing_2:
 
 total_commander_wifi_wlan_plugin:
   - com.ghisler.tcplugins.wifitransfer/com.ghisler.tcplugins.wifitransfer.WifiReceiveActivity
+
+geometry_dash:
+  - com.opengdteam.opengd/org.axmol.cpp.AppActivity
