--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -132,3 +132,6 @@ total_commander_wifi_wlan_plugin:
 
 geometry_dash:
   - com.opengdteam.opengd/org.axmol.cpp.AppActivity
+
+myfastweb:
+  - it.fastweb.myfastweb/it.fastweb.myfastweb.activities.SplashActivityChristmas
