Added Munbyn Print Icon (#1066)
* Added Munbyn Print Icon

* Update icons.yml

* Update icons.yml

---------

Co-authored-by: Gitro <108683123+GitGitro@users.noreply.github.com>

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -67,6 +67,10 @@ thanox:
 mysa_gov:
   - au.gov.sa.my/au.gov.sa.my.MainActivity
 
+
+munbyn_print:
+  - com.syz.mprint/com.syz.mprint.view.activity.LaunchActivity
+
 axs_tickets:
   - com.axs.android/com.axs.android.ui.content.main.MainActivity
 
