added shokz icon

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -136,3 +136,6 @@ geometry_dash:
 
 myfastweb:
   - it.fastweb.myfastweb/it.fastweb.myfastweb.activities.SplashActivityChristmas
+
+shokz:
+  - cn.com.aftershokz.app/cn.com.aftershokz.app.ui.auth.SplashActivity
