house_sigma fix

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -136,3 +136,6 @@ geometry_dash:
 
 myfastweb:
   - it.fastweb.myfastweb/it.fastweb.myfastweb.activities.SplashActivityChristmas
+
+house_sigma:
+  - com.housesigma.android/com.housesigma.android.ui.splash.SplashActivity
