house_sigma fix (#1069)
Co-authored-by: Gitro <108683123+GitGitro@users.noreply.github.com>

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -137,5 +137,8 @@ geometry_dash:
 myfastweb:
   - it.fastweb.myfastweb/it.fastweb.myfastweb.activities.SplashActivityChristmas
 
+house_sigma:
+  - com.housesigma.android/com.housesigma.android.ui.splash.SplashActivity
+
 shokz:
   - cn.com.aftershokz.app/cn.com.aftershokz.app.ui.auth.SplashActivity
