--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -67,7 +67,6 @@ thanox:
 mysa_gov:
   - au.gov.sa.my/au.gov.sa.my.MainActivity
 
-
 munbyn_print:
   - com.syz.mprint/com.syz.mprint.view.activity.LaunchActivity
 
@@ -142,3 +141,17 @@ house_sigma:
 
 shokz:
   - cn.com.aftershokz.app/cn.com.aftershokz.app.ui.auth.SplashActivity
+
+cryptotracker:
+  - jdm.apps.cryptotracker/jdm.apps.cryptotracker.MainActivity
+
+global_icon_pack:
+  - com.richardluo.globalIconPack/com.richardluo.globalIconPack.ui.MainActivity
+
+global_icon_pack: {}
+
+syncara:
+  - syncara.app/syncara.app.MainActivity
+
+whisperime:
+  - org.woheller69.whisper/com.whispertflite.DownloadActivity
