--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,9 +53,11 @@ android {
 
 	}
 
-	compileOptions {
-		sourceCompatibility JavaVersion.VERSION_11
-		targetCompatibility JavaVersion.VERSION_11
+}
+
+java {
+	toolchain {
+		languageVersion = JavaLanguageVersion.of(11)
 	}
 }
 
@@ -69,8 +71,8 @@ dependencies {
      * If you've missed some versions you've to also follow update guide for those versions
      */
 
-	playImplementation 'com.github.zixpo:candybar:3.21.0'
-	fossImplementation 'com.github.donnnno:candybar-foss:3.20.4'
+	playImplementation 'com.github.zixpo:candybar:3.21.1'
+	fossImplementation 'com.github.donnnno:candybar-foss:3.21.1'
 }
 
 // Code for automatically copying appfilter.xml and drawable.xml
