add icons premium request

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -155,3 +155,9 @@ syncara:
 
 whisperime:
   - org.woheller69.whisper/com.whispertflite.DownloadActivity
+
+life_time_digital:
+  - com.lifetimefitness.interests.fitness/com.lifetimefitness.interests.fitness.OneActivity
+
+mopria_print_service:
+  - org.mopria.printplugin/org.mopria.printplugin.SplashScreenActivity
