--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -161,3 +161,12 @@ life_time_digital:
 
 mopria_print_service:
   - org.mopria.printplugin/org.mopria.printplugin.SplashScreenActivity
+
+qrshare:
+  - com.wchung.qrshare/com.wchung.qrshare.MainActivity
+
+fossify_paint:
+  - org.fossify.paint/org.fossify.paint.activities.SplashActivity.Green
+
+metrolist:
+  - com.metrolist.music/com.metrolist.music.MainActivity
