--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -155,3 +155,18 @@ syncara:
 
 whisperime:
   - org.woheller69.whisper/com.whispertflite.DownloadActivity
+
+life_time_digital:
+  - com.lifetimefitness.interests.fitness/com.lifetimefitness.interests.fitness.OneActivity
+
+mopria_print_service:
+  - org.mopria.printplugin/org.mopria.printplugin.SplashScreenActivity
+
+qrshare:
+  - com.wchung.qrshare/com.wchung.qrshare.MainActivity
+
+fossify_paint:
+  - org.fossify.paint/org.fossify.paint.activities.SplashActivity.Green
+
+metrolist:
+  - com.metrolist.music/com.metrolist.music.MainActivity
