--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,183 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+wikipedia:
+  - org.wikipedia/org.wikipedia.DefaultIcon
+
+weather:
+  - com.akylas.weather/com.akylas.weather.MainActivity
+  - com.apalon.weatherlive.free/com.apalon.weatherlive.activity.ActivityMain
+
+discover_mobile:
+  - com.discoverfinancial.mobile/dc3bc0d65.w0d9716dd.m1205d83d.x57accd1f
+
+nekogram:
+  - tw.nekomimi.nekogram/org.telegram.messenger.NoxIcon
+
+amex_mobile:
+  - com.americanexpress.android.acctsvcs.in/com.americanexpress.android.intl.app.view.activity.SplashInitializationActivity
+
+bcp:
+  - com.bcp.bank.bcp/com.bcp.bank.startappbcp.splash.SplashActivity
+
+bbc_weather:
+  - bbc.mobile.weather/bbc.mobile.weather.feature.app.ui.main.MainActivity
+  - bbc.mobile.weather/bbc.mobile.weather.feature.app.ui.MsiActivity
+  
+hsbc:
+  - my.com.hsbc.hsbcmalaysia/com.hsbc.mobilebanking.splash.SplashActivity
+
+file_manager:
+  - com.htetznaing.zfile/com.htetznaing.zfile.ui.MainActivity
+  - com.coloros.filemanager/com.oplus.filemanager.main.ui.SplashActivity
+
+pdf_reader:
+  - com.pdfeditor.pdfeditorandriod/com.pdfeditor.pdfeditorandriod.activity.MainActivity
+
+microsoft_outlook:
+  - com.microsoft.office.outlook/com.microsoft.office.outlook.ui.miit.MiitLauncherActivity
+
+dominos:
+  - is.stokkur.dominos/app.stokkur.dominos.MainActivity
+
+swiggy:
+  - in.swiggy.android/in.swiggy.android.HomeIcon
+
+yetcalc:
+  - yetzio.yetcalc/yetzio.yetcalc.HomeActivity
+
+testy_hardware_check:
+  - com.robertlevonyan.testy/com.robertlevonyan.testy.base.MainActivity
+
+kinemaster:
+  - com.nexstreaming.app.kinemasterfree/com.kinemaster.app.screen.splash.SplashActivity
+
+pia_vpn:
+  - com.privateinternetaccess.android/com.kape.vpn.MainActivity
+
+megogo:
+  - com.megogo.application/net.megogo.app.main.MainActivity
+
+hello_bank:
+  - fr.bnpp.digitalbanking/fr.bnpp.digitalbanking.prehome.SplashScreenActivity
+
+safe__in__cloud:
+  - com.safeincloud/com.safeincloud.ui.EntryActivity
+
+pathao:
+  - com.pathao.user/com.pathao.user.ui.core.splash.SplashActivity
+
+printer:
+  - com.hp.printercontrol/com.hp.printercontrol.hpx.PrinterControlWrapperActivity
+
+my_idoom:
+  - com.at.dz/dz.algerietelecom.ec.MainActivity
+
+amigo:
+  - com.tomtom.speedcams.android.map/com.tomtom.amigo.MainActivity
+
+goodnotes:
+  - com.goodnotes.android.app/com.goodnotes.android.app.twa.GoodnotesLauncherActivity
+
+umang:
+  - in.gov.umang.negd.g2c/in.gov.umang.negd.g2c.kotlin.ui.splash.UmangLauncherActivity
+
+bank:
+  - com.clairmail.fth/com.fifththird.mobilebanking.digital.login.LoginActivity
+  - com.VCB/com.VCB.ui.activities.splash.SplashActivity
+  - az.unibank.mbanking/bank.activity.MigrationActivity
+
+arc_search:
+  - company.thebrowser.arc/company.thebrowser.arc.composable.ArcActivity.IconSeven
+
+nekogramx:
+  - nekox.messenger.broken/org.telegram.messenger.MomogramThemedXEyeIcon
+
+notebloc:
+  - com.notebloc.app/com.notebloc.app.activity.MigrateStorageActivity
+
+odyssey:
+  - org.gateshipone.odyssey/org.gateshipone.odyssey.activities.OdysseyMainActivity
+
+dictionary:
+  - com.mobisystems.msdict.embedded.wireless.oxford.dictionaryofenglish/com.mobisystems.base_dict_plugin.MainActivity
+
+kicker:
+  - com.netbiscuits.kicker/com.tickaroo.kicker.purabo.onboarding.KPurAboOnboardingActivity
+
+getapps:
+  - com.xiaomi.mipicks/com.xiaomi.mipicks.AppMallAlias
+
+bible:
+  - com.tecarta.TecartaBible/com.tecarta.TecartaBible.MainActivity
+
+walpy:
+  - com.feresr.walpy/com.feresr.walpy.ui.MainActivity
+
+be:
+  - xyz.be.customer/xyz.be.customer.SplashInitActivity
+
+wwe:
+  - com.wwe.universe/com.imggaming.dicemobile.MainActivity
+
+avg_antivirus:
+  - com.antivirus/com.avast.android.one.base.ui.main.MainActivity
+  - com.s.antivirus/com.avast.android.one.base.ui.main.MainActivity
+
+means_tv:
+  - tv.uscreen.meanstv/com.example.videoapp.MainActivity
+
+bhim:
+  - in.org.npci.upiapp/stuejoy.x
+
+dodo_pizza:
+  - ru.dodopizza.app/ru.dodopizza.app.presentation.main.MainActivity
+
+bbc_news:
+  - bbc.mobile.news.ww/com.mobile.MainActivity
+
+bradesco:
+  - com.bradesco/br.com.bradesco.integrador.splash.SplashIcon07
+
+mobile_pay:
+  - fi.danskebank.mobilepay/com.dnb.vipps.android.startup.ui.StartupActivity
+
+gacha_club:
+  - air.com.lunime.gachaclub/air.com.lunime.gachaclub.AIRAppEntry
+
+osn:
+  - com.osn.go/com.osn.go.MainActivity
+
+eset_mobile_security_antivirus:
+  - com.eset.ems2.gp/com.eset.ems.gui.AliasSafeLauncherActivity
+
+comdirect_phototan:
+  - com.comdirect.phototan/de.comdirect.phototan.feature.splash.impl.SplashActivity
+
+firefox_beta:
+  - org.mozilla.firefox_beta/org.mozilla.firefox_beta.AlternativeApp
+
+xumm:
+  - com.xrpllabs.xumm/com.xrpllabs.xumm.LaunchActivity
+
+gigalife:
+  - com.smart.consumer.app/com.smart.consumer.app.view.splash.OnboardingActivity
+
+coursera:
+  - org.coursera.android/org.coursera.android.splash.MainActivity
+
+poweramp_zap:
+  - com.maxmpz.audioplayer/com.maxmpz.audioplayer.rounded_inverted_mu
+
+uala:
+  - ar.com.bancar.uala/ar.com.bancar.uala.ui.splash.InitActivity
+
+caixa:
+  - br.com.gabba.Caixa/br.com.gabba.Caixa.presentation.SplashActivity
+
+quickmemo:
+  - com.fluidtouch.noteshelf2/com.fluidtouch.noteshelf.compose.FTBaseShelfComposeActivity
+
+comviq:
+  - se.comviq.android/se.comviq.app.presentation.main.ComviqMainActivity
