add icons for - wahoo - turn up - secure go plus - reality scan - psd banking - phone battery complication - obsidian todo widget - nanlink - monitor plus - immoscout24 - idealo - hybrid calisthenics - geminiman wearos manager - shimano etube project - sony creator's app - atlas obscura
fix icons
- komoot
- rmv

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -35,7 +35,7 @@ bcp:
 bbc_weather:
   - bbc.mobile.weather/bbc.mobile.weather.feature.app.ui.main.MainActivity
   - bbc.mobile.weather/bbc.mobile.weather.feature.app.ui.MsiActivity
-  
+
 hsbc:
   - my.com.hsbc.hsbcmalaysia/com.hsbc.mobilebanking.splash.SplashActivity
 
@@ -192,3 +192,57 @@ quickmemo:
 
 comviq:
   - se.comviq.android/se.comviq.app.presentation.main.ComviqMainActivity
+
+atlas_obscura:
+  - com.atlasobscura.android/com.atlasobscura.app.ui.MainActivity
+
+creators_app:
+  - jp.co.sony.ips.portalapp/jp.co.sony.ips.portalapp.welcome.WelcomeActivity
+
+e-tube:
+  - com.shimano.etubeprojectmobile.droid.phone/com.shimano.etubeproject.presentation.main.MainActivity
+
+geminiman_wearos_manager:
+  - com.geminiman.wearosmanager/com.geminiman.wearosmanager.MainActivity
+
+hybrid_calisthenics:
+  - com.hybridcalisthenics.app/com.hybridcalisthenics.app.ui.app.MainActivity
+
+idealo:
+  - de.idealo.android/de.idealo.android.MainActivity
+
+immoscout24:
+  - de.is24.android/de.is24.mobile.splash.SplashScreenActivity
+
+monitor_plus:
+  - com.uhi.monitorplusflutter.gstore/com.uhi.monitorplusflutter.gstore.MainActivity
+
+komoot:
+  - de.komoot.android/de.komoot.android.ui.RootActivity
+
+nanlink:
+  - com.nanlink.nanlink/com.nanlink.nanlink.ui.SplashAty
+
+obsidian_todo_widget:
+  - de.yukigasai.obsidiantodowidget/de.yukigasai.obsidiantodowidget.MainActivity
+
+phone_battery_complication:
+  - com.weartools.phonebattcomp/com.weartools.phonebattcomp.MainActivity
+
+psd_banking:
+  - de.psd.banking.app/de.fiduciagad.banking.screens.navigation.NavigationActivity
+
+reality_scan:
+  - com.epicgames.realityscan/com.epicgames.realityscan.MainActivity
+
+rmv:
+  - com.cubic.rmvgo/com.cubic.rmv30.MainActivity
+
+securego_plus:
+  - de.fiduciagad.securego.wl/de.fiduciagad.securego.MainActivity
+
+turn_up:
+  - com.dately/com.dately.MainActivity
+
+wahoo:
+  - com.wahoofitness.fitness/com.wahoofitness.fitness.ui.activity.WFMainActivity
