missing icon: Global Icon Pack + Alt 1

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -246,3 +246,8 @@ turn_up:
 
 wahoo:
   - com.wahoofitness.fitness/com.wahoofitness.fitness.ui.activity.WFMainActivity
+
+global_icon_pack:
+  - com.richardluo.globalIconPack/com.richardluo.globalIconPack.ui.MainActivity
+
+global_icon_pack_alt_1: {}
