add missing compinfos from emails

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -251,3 +251,15 @@ global_icon_pack:
   - com.richardluo.globalIconPack/com.richardluo.globalIconPack.ui.MainActivity
 
 global_icon_pack_alt_1: {}
+
+air_canada:
+  - com.aircanada/com.aircanada.mobile.ui.activity.MainActivity.DarkIconLauncher
+
+reebee:
+  - com.reebee.reebee/com.wishabi.flipp.ui.launcher.DefaultLauncherActivity
+
+scene_plus:
+  - com.scene.mobile/com.scene.ui.SplashActivity
+
+gasbuddy:
+  - gbis.gbandroid/gbis.gbandroid.MainActivity
