new icon: Sonic Dash (made by @ticoeteco23gb)

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -263,3 +263,6 @@ scene_plus:
 
 gasbuddy:
   - gbis.gbandroid/gbis.gbandroid.MainActivity
+
+sonic_dash:
+  - com.sega.sonicdash/com.sega.gamelib.ActivityGame
