rename icon: e-tube -> e_tube

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -199,7 +199,7 @@ atlas_obscura:
 creators_app:
   - jp.co.sony.ips.portalapp/jp.co.sony.ips.portalapp.welcome.WelcomeActivity
 
-e-tube:
+e_tube:
   - com.shimano.etubeprojectmobile.droid.phone/com.shimano.etubeproject.presentation.main.MainActivity
 
 geminiman_wearos_manager:
