Add 1 icon and update compinfo

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -15,6 +15,7 @@
 
 wikipedia:
   - org.wikipedia/org.wikipedia.DefaultIcon
+  - org.wikipedia.beta/org.wikipedia.DefaultIcon
 
 weather:
   - com.akylas.weather/com.akylas.weather.MainActivity
@@ -246,3 +247,9 @@ turn_up:
 
 wahoo:
   - com.wahoofitness.fitness/com.wahoofitness.fitness.ui.activity.WFMainActivity
+
+authenticator_pro:
+  - com.stratumauth.app/crc6427d348f39abaf1dd.MainActivity
+
+dms_explorer:
+  - net.mm2d.dmsexplorer/net.mm2d.dmsexplorer.StartActivity
