add predicted entries (by requests_parser.py) in icons.yml

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -266,3 +266,22 @@ gasbuddy:
 
 sonic_dash:
   - com.sega.sonicdash/com.sega.gamelib.ActivityGame
+
+blood_strike:
+  - com.netease.newspikevn/com.netease.game.MessiahNativeActivity
+
+camera:
+  - com.android.MGC_9_1_098/com.android.camera.CameraLauncher
+  - com.agc.gcam94/com.android.camera.CameraLauncher
+
+calendar:
+  - org.calyxos.etar/com.android.calendar.AllInOneActivity
+
+sms_alt_7:
+  - com.fulldive.extension.divesms/com.moez.QKSMS.feature.main.MainActivity
+
+feedly:
+  - com.devhd.feedly.classic/com.devhd.feedly.Main
+
+tachiyomi:
+  - xyz.luft.tachiyomi.mi/eu.kanade.tachiyomi.ui.main.MainActivity
