new icon: Perekrestok

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -285,3 +285,6 @@ feedly:
 
 tachiyomi:
   - xyz.luft.tachiyomi.mi/eu.kanade.tachiyomi.ui.main.MainActivity
+
+perekrestok:
+  - ru.perekrestok.app/ru.perekrestok.app.presentation.MainActivity
