new icon: Lenta

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -288,3 +288,6 @@ tachiyomi:
 
 perekrestok:
   - ru.perekrestok.app/ru.perekrestok.app.presentation.MainActivity
+
+lenta:
+  - ru.lenta.lentochka/ru.app.main.MainActivity
