--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -291,3 +291,6 @@ perekrestok:
 
 lenta:
   - ru.lenta.lentochka/ru.app.main.MainActivity
+
+uchi:
+  - com.uchi.app/com.uchi.app.presentation.MainActivity
