new compinfo: Nova Poshta

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -297,3 +297,6 @@ uchi:
 
 drinkit:
   - ru.drinkit/ru.drinkit.ui.MainActivity
+
+nova_poshta:
+  - eu.novapost/com.example.novaposhta.ui.splash.SplashActivity
