--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -200,7 +200,7 @@ atlas_obscura:
 creators_app:
   - jp.co.sony.ips.portalapp/jp.co.sony.ips.portalapp.welcome.WelcomeActivity
 
-e-tube:
+e_tube:
   - com.shimano.etubeprojectmobile.droid.phone/com.shimano.etubeproject.presentation.main.MainActivity
 
 geminiman_wearos_manager:
@@ -247,6 +247,60 @@ turn_up:
 
 wahoo:
   - com.wahoofitness.fitness/com.wahoofitness.fitness.ui.activity.WFMainActivity
+
+global_icon_pack:
+  - com.richardluo.globalIconPack/com.richardluo.globalIconPack.ui.MainActivity
+
+global_icon_pack_alt_1: {}
+
+air_canada:
+  - com.aircanada/com.aircanada.mobile.ui.activity.MainActivity.DarkIconLauncher
+
+reebee:
+  - com.reebee.reebee/com.wishabi.flipp.ui.launcher.DefaultLauncherActivity
+
+scene_plus:
+  - com.scene.mobile/com.scene.ui.SplashActivity
+
+gasbuddy:
+  - gbis.gbandroid/gbis.gbandroid.MainActivity
+
+sonic_dash:
+  - com.sega.sonicdash/com.sega.gamelib.ActivityGame
+
+blood_strike:
+  - com.netease.newspikevn/com.netease.game.MessiahNativeActivity
+
+camera:
+  - com.android.MGC_9_1_098/com.android.camera.CameraLauncher
+  - com.agc.gcam94/com.android.camera.CameraLauncher
+
+calendar:
+  - org.calyxos.etar/com.android.calendar.AllInOneActivity
+
+sms_alt_7:
+  - com.fulldive.extension.divesms/com.moez.QKSMS.feature.main.MainActivity
+
+feedly:
+  - com.devhd.feedly.classic/com.devhd.feedly.Main
+
+tachiyomi:
+  - xyz.luft.tachiyomi.mi/eu.kanade.tachiyomi.ui.main.MainActivity
+
+perekrestok:
+  - ru.perekrestok.app/ru.perekrestok.app.presentation.MainActivity
+
+lenta:
+  - ru.lenta.lentochka/ru.app.main.MainActivity
+
+uchi:
+  - com.uchi.app/com.uchi.app.presentation.MainActivity
+
+drinkit:
+  - ru.drinkit/ru.drinkit.ui.MainActivity
+
+nova_poshta:
+  - eu.novapost/com.example.novaposhta.ui.splash.SplashActivity
 
 authenticator_pro:
   - com.stratumauth.app/crc6427d348f39abaf1dd.MainActivity
