--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -346,3 +346,9 @@ xposed_edge:
 
 cloudflare_one_agent:
   - com.cloudflare.cloudflareoneagent/com.cloudflare.app.presentation.main.SplashActivity
+
+ente:
+  - io.ente.photos/io.ente.photos.MainActivity
+
+oppo_phone_manager:
+  - com.oplus.phonemanager/com.oplus.phonemanager.FakeActivity
