Add icons&compinfo (#1076)
* add icons

* add compinfo

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,48 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+scene:
+  - com.omarea.vtools/com.omarea.vtools.activities.ActivityMain
+
+hidive:
+  - com.hidive.android/com.imggaming.dicemobile.MainActivity
+
+memeos_enhancer:
+  - en.hyperosdownloader/en.hyperosdownloader.MainActivity
+
+screenzen:
+  - com.screenzen/com.screenzen.ui.activity.splash.SplashActivity
+
+nothing_kwgt:
+  - nothing.cnt.kwgt/nothing.cnt.kwgt.MainActivity
+
+john_gbac:
+  - com.johnemulators.johngbac/com.johnemulators.activity.RomListActivity
+
+loops:
+  - com.pixelfed.loops/com.pixelfed.loops.MainActivity
+
+paypo:
+  - com.paypo.mobile/com.paypo.mobile.presentation.SplashActivity
+
+phantom:
+  - app.phantom/app.phantom.MainActivity
+
+avnc:
+  - com.gaurav.avnc/com.gaurav.avnc.StartupActivity
+
+nothing_gallery:
+  - com.nothing.gallery/com.nothing.gallery.activity.EntryActivity
+
+xposed_edge:
+  - com.jozein.xedge/com.jozein.xedge.ui.ActivityMain
+
+cloudflare_one_agent:
+  - com.cloudflare.cloudflareoneagent/com.cloudflare.app.presentation.main.SplashActivity
+
+ente:
+  - io.ente.photos/io.ente.photos.MainActivity
+
+oppo_phone_manager:
+  - com.oplus.phonemanager/com.oplus.phonemanager.FakeActivity
