--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -57,3 +57,25 @@ ente:
 
 oppo_phone_manager:
   - com.oplus.phonemanager/com.oplus.phonemanager.FakeActivity
+
+ble_radar:
+  - f.cking.software/f.cking.software.ui.MainActivity
+
+lines:
+  - com.natewren.lines/com.natewren.dashboard.SplashScreen
+  - com.natewren.linesfree/com.natewren.dashboard.SplashScreen
+  - com.natewren.linesdarkfree/com.natewren.dashboard.SplashScreen
+
+original_sound:
+  - com.yscoco.yssound/com.yscoco.yssound.ui.activity.SplashActivity
+
+red_reader_alpha:
+  - org.quantumbadger.redreaderalpha/org.quantumbadger.redreaderalpha.activities.MainActivity
+
+twitcast:
+  - com.sidefeed.TCViewer/st.moi.tcviewer.presentation.launcher.LauncherActivity
+  - com.sidefeed.TCLive/com.sidefeed.TCLive.activity.SpashActivity
+  - com.sidefeed.TCViewer/st.moi.tcviewer.presentation.home.HomeActivity
+
+viabus:
+  - com.indyzalab.transitia/com.indyzalab.transitia.SplashActivity
