--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -79,3 +79,66 @@ twitcast:
 
 viabus:
   - com.indyzalab.transitia/com.indyzalab.transitia.SplashActivity
+
+time_calculator:
+  - com.teaxapp.hourcal/com.teaxapp.hourcal.MainActivity
+
+autoshare:
+  - com.joaomgcd.autoshare/com.joaomgcd.autoapps.ActivityLaunchApp
+
+power_shortcuts:
+  - com.ss.powershortcuts/com.ss.powershortcuts.MainActivity
+
+stitch:
+  - soko.ekibun.stitch/soko.ekibun.stitch.MainActivity
+
+do_it_now:
+  - com.levor.liferpgtasks/com.levor.liferpgtasks.view.activities.SplashActivity
+
+autotools:
+  - com.joaomgcd.autotools/com.joaomgcd.autoapps.ActivityLaunchApp
+
+chwazi:
+  - com.tendadigital.chwaziApp/com.tendadigital.chwaziApp.SplashScreen
+
+quickshort:
+  - com.atolphadev.quikshort/com.atolphadev.quikshort.activities.MainActivity
+
+board:
+  - com.board/com.board.Main
+
+structured:
+  - io.unorderly.structured/com.structured.MainActivity
+
+tn2:
+  - com.janzimola.goal_venture2/com.janzimola.goal_venture.MainActivity
+
+lucky_draw:
+  - com.snake.luckydraw/com.snake.luckydraw.MainActivity
+
+purchased_apps:
+  - com.azefsw.purchasedapps/com.azefsw.purchasedapps.ui.startup.StartupActivity
+
+tasks_to_do_list:
+  - com.tasks.android/com.tasks.android.activities.MainActivity
+
+smarter_bookmarks:
+  - com.smarter.technologist.android.smarterbookmarks/com.smarter.technologist.android.smarterbookmarks.MainActivity
+
+autovoice:
+  - com.joaomgcd.autovoice/com.joaomgcd.autoapps.ActivityLaunchApp
+
+pinned_shortcuts:
+  - rk.android.app.pinnedshortcuts/rk.android.app.pinnedshortcuts.activities.launch.LaunchActivity
+
+start_me:
+  - com.startme/com.startme.activities.MainActivity
+
+timer_widget_tea_timer:
+  - net.hirschkorn.teatime/net.hirschkorn.teatime.main.MainActivity
+
+nt_calculator:
+  - thanhletranngoc.calculator.pro/thanhletranngoc.calculator.pro.activities.MainActivity
+
+onetwo:
+  - com.nicue.onetwo/com.nicue.onetwo.MainActivity
