--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -142,3 +142,12 @@ nt_calculator:
 
 onetwo:
   - com.nicue.onetwo/com.nicue.onetwo.MainActivity
+
+evil_spin:
+  - evil.spin/evil.spin.MainActivity
+
+faraday:
+  - pw.faraday.faraday/im.vector.application.features.Alias
+
+nymvpn:
+  - net.nymtech.nymvpn/net.nymtech.nymvpn.ui.MainActivity
