--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -151,3 +151,30 @@ faraday:
 
 nymvpn:
   - net.nymtech.nymvpn/net.nymtech.nymvpn.ui.MainActivity
+
+radioplayer_ukraine:
+  - ua.radioplayer.app/ua.radioplayer.radioplayer.MainActivity
+
+storage_box_organizer:
+  - dev.freedom45.whatsinthebox/crc648871252fdab0bcfd.SplashActivity
+
+smartworks_mobile:
+  - com.smartworks/com.smartworks.MainActivity
+
+orange_tv:
+  - tv.nangu.orange.android/tv.nangu.SplashActivity
+
+formula_e:
+  - com.fiaformulae.formulae/com.fiaformulae.formulae.SplashActivity
+
+routematic:
+  - com.routematic.employee/com.routematic.employee.MainActivity
+
+dbz_battery_widget:
+  - com.tomer.dbz.widget/com.tomer.dbz.widget.MainActivity
+
+myinfocert:
+  - it.infocert.myinfocert.phoenix/com.mobile.android.infocert.section.launch.ui.LaunchActivity
+
+notisave_tenqube:
+  - com.tenqube.notisave/com.tenqube.notisave.presentation.splash.SplashActivity
