--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -178,3 +178,9 @@ myinfocert:
 
 notisave_tenqube:
   - com.tenqube.notisave/com.tenqube.notisave.presentation.splash.SplashActivity
+
+western_union_send_money:
+  - com.westernunion.moneytransferr3app.ca/com.wurnmobile.MainActivity
+
+pvz:
+  - com.popcap.pvz_na/com.popcap.pvz_na.COPPAActivity
